@@ -113,6 +113,11 @@ static void st_masterlock_init(st_masterlock * m)
   return;
 };
 
+static uintnat st_masterlock_waiters(st_masterlock * m)
+{
+  return atomic_load_acq(&m->waiters);
+}
+
 static void st_bt_lock_acquire(st_masterlock *m) {
 
   /* We do not want to signal the backup thread is it is not "working"
@@ -132,7 +137,7 @@ static void st_bt_lock_release(st_masterlock *m) {
   /* Here we do want to signal the backup thread iff there's
      no thread waiting to be scheduled, and the backup thread is currently
      idle. */
-  if (atomic_load_acq(&m->waiters) == 0 &&
+  if (st_masterlock_waiters(m) == 0 &&
       caml_bt_is_in_blocking_section() == 0) {
     caml_bt_exit_ocaml();
   }
@@ -179,15 +184,13 @@ static void st_masterlock_release(st_masterlock * m)
 */
 Caml_inline void st_thread_yield(st_masterlock * m)
 {
-  uintnat waiters;
-
   pthread_mutex_lock(&m->lock);
   /* We must hold the lock to call this. */
 
   /* We already checked this without the lock, but we might have raced--if
      there's no waiter, there's nothing to do and no one to wake us if we did
      wait, so just keep going. */
-  waiters = atomic_load_acq(&m->waiters);
+  uintnat waiters = st_masterlock_waiters(m);
 
   if (waiters == 0) {
     pthread_mutex_unlock(&m->lock);
