@@ -186,6 +186,13 @@ OCaml 5.0
   Guillaume Munch-Maccagnoni, additional discussions with Stephen
   Dolan and Luc Maranget)
 
+- #5299, #4787, #11138, #11272: `Caml_state` is `NULL` when the domain lock is
+  not held. This allows to test if the current thread holds the lock of its
+  domain, and it makes it simpler to debug when one forgets to acquire
+  the lock.
+  (Guillaume Munch-Maccagnoni, review by Sadiq Jaffer, Xavier Leroy and
+  Gabriel Scherer)
+
 ### Code generation and optimizations:
 
 - #10972: ARM64 multicore support: OCaml & C stack separation;
